@@ -18,6 +18,10 @@ tasks.withType<JavaCompile>().configureEach {
   options.compilerArgs.add("--enable-preview")
 }
 
+tasks.withType<JavaExec>().configureEach {
+  jvmArgs("--enable-preview")
+}
+
 spotless {
   lineEndings = PLATFORM_NATIVE
   kotlin {
